fixing problem with scrollable version iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ and (max-device-width: 812px){
     min-height: 100vh;
 }
     .money{
-        margin-top: 25vh;
+        margin-top: 20vh;
         font-family: "SFProRounded";
         font-size: 80px;
         font-weight: bold;
@@ -81,7 +81,7 @@ and (max-device-width: 812px){
     .text{
     font-size: 40px;
     margin-top: 16px;
-    padding: 0% 10%;
+    padding: 0% 17%;
     text-align: center;
     }
 
